<resources>
    <string name="app_name">Visage</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <string name="openDrawerContentDescRes">openDrawerContentDescRes</string>
    <string name="closeDrawerContentDescRes">closeDrawerContentDescRes</string>

    <!--Tab Title-->
    <string name="tab_all_photos">All Photos</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_tags">Tags</string>

    <!--fragment titles-->
    <string name="title_fragment_favourite">Favourites</string>
    
    <!--User Profile-->
    <string name="username">S\'chn T\'gai Spock</string>
    <string name="email">schn.tgai.spock@startrek.com</string>

    <!--Navigation Drawer Items-->
    <string name="explore">Explore</string>
    <string name="people">People</string>
    <string name="favourite">Favourites</string>
    <string name="notification">Notifications</string>
    <string name="setting">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="about_help">About &amp; Help</string>

    <!--Email Spinner-->
    <string-array name="email_spinner">
        <item>@string/email</item>
        <item>Edit profile</item>
        <item>Switch user</item>
        <item>Log out</item>
    </string-array>
    <string name="title_activity_photo">PhotoActivity</string>

</resources>
